--- a/07-resourcemanagement.yml
+++ b/07-resourcemanagement.yml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: resource-demo
+  name: frontend
 spec:
   containers:
-  - name: nginx
-    image: nginx
+  - name: app
+    image: images.my-company.example/app:v4
     resources:
       requests:
-        cpu: "100m"
-        memory: "128mi"
+        memory: "64Mi"
+        cpu: "250m"
       limits:
-        cpu: "100m"
-        memory: "128mi"
+        memory: "128Mi"
+        cpu: "500m"
