--- a/09-pod.config-map.yml
+++ b/09-pod.config-map.yml
@@ -9,7 +9,7 @@ spec:
     ports:
     - containerPort: 80
     env:
-      - name: nginx
+      - name: course
         valueFrom:
           configMapKeyRef:
             name: config-demo
