--- a/16-deployments.yml
+++ b/16-deployments.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
-kind: ReplicaSet
+kind: Deployment
 metadata:
-  name: nginx
+  name: nginx-deployment
   labels:
     name: nginx
     environment: dev
