--- a/17-example.yml
+++ b/17-example.yml
@@ -13,6 +13,7 @@ spec: # this is the replica definition
       environment: dev
   template: # this is the pod definition
     metadata:
+      name: replica
       labels:
         project: expense
         environment: dev
