--- a/17-example.yml
+++ b/17-example.yml
@@ -1,6 +1,8 @@
 kind: Replicaset
 apiVersion: v1
 metadata:
+  name: my-replica
+  namespace: default
   labels:
     project: expense
     environment: dev
