--- a/17-example.yml
+++ b/17-example.yml
@@ -14,6 +14,7 @@ spec: # this is the replica definition
       environment: dev
   template: # this is the pod definition
     metadata:
+      name: my-replica
       labels:
         project: expense
         environment: dev
