--- a/17-example.yml
+++ b/17-example.yml
@@ -1,15 +1,14 @@
 kind: Replicaset
-apiVersion: v1
+apiVersion: apps/v1
 metadata:
   name: my-replica
-  namespace: default
   labels:
     project: expense
     environment: dev
 spec: # this is the replica definition
   replicas: 2
   selector:
-    matchlabels:
+    matchLabels:
       project: expense
       environment: dev
   template: # this is the pod definition
