--- a/17-example.yml
+++ b/17-example.yml
@@ -1,7 +1,7 @@
 kind: Replicaset
 apiVersion: apps/v1
 metadata:
-  name: my-replica
+  name: nginx
   labels:
     project: expense
     environment: dev
@@ -13,7 +13,7 @@ spec: # this is the replica definition
       environment: dev
   template: # this is the pod definition
     metadata:
-      name: my-replica
+      name: nginx
       labels:
         project: expense
         environment: dev
