--- a/17-example.yml
+++ b/17-example.yml
@@ -19,7 +19,7 @@ spec: # this is the replica definition
         environment: dev
     spec:
      containers:
-       - name: nginx
+       - name: nginx-1
          image: nginx    
          ports:
          - protocol: TCP
