--- a/17-example.yml
+++ b/17-example.yml
@@ -24,3 +24,17 @@ spec: # this is the replica definition
          ports:
          - protocol: TCP
            containerPort: 80
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: my-service
+spec:
+  selector:
+    project: expense
+    environment: dev
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
