--- a/17-example.yml
+++ b/17-example.yml
@@ -31,11 +31,12 @@ kind: Service
 metadata:
   name: my-service
 spec:
+  type: NodePort
   selector:
-    type: NodePort
-    project: expense
-    environment: dev
+      project: expense
+      environment: dev
   ports:
     - protocol: TCP
       port: 80
       targetPort: 80
+      nodePort: 32600  
