--- a/17-example.yml
+++ b/17-example.yml
@@ -31,11 +31,7 @@ kind: Service
 metadata:
   name: my-service
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
       project: expense
-      environment: dev
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80 
+      environment: dev 
