--- a/17-example.yml
+++ b/17-example.yml
@@ -34,4 +34,8 @@ spec:
   type: LoadBalancer
   selector:
       project: expense
-      environment: dev 
+      environment: dev
+  ports:
+  - protocol: TCP
+    port: 80 #service port
+    targetPort: 80 # target port    
